--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: release
-      url: https://pypi.org/p/changedetection-osint-processor
+      url: https://pypi.org/p/changedetection.io-osint-processor
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
